--- a/Induwara/editor.html
+++ b/Induwara/editor.html
@@ -38,7 +38,7 @@
     <div class="main">
         <center><img src="./assests/induwara.jpg" alt="Induwara Arachchi" width="170" class="image"></center>
 
-        <h1>Page Editer</h1>
+        <h1>Page Editor</h1>
         <h2>Induwara Arachchi</h2>
         <h3>Student Role: 2</h3>
 
