--- a/Lithila/editor.html
+++ b/Lithila/editor.html
@@ -39,7 +39,7 @@
 
     <div class="main">
         <center><img src="assests/lithila.jpg" alt="Lithila Mahagedara" width="170" class="image"></center>
-        <h1>Page Editer</h1>
+        <h1>Page Editor</h1>
         <h2>Lithila Mahagedara</h2>
         <h3>Student Role: 4</h3>
         <p>I Designed and Implimented following pages...</p><hr><hr>
