--- a/Induwara/feedback.html
+++ b/Induwara/feedback.html
@@ -137,7 +137,7 @@
     <div id="thankYouMessage" class="thank-you">
         <h2> Thank you for your Feedback! </h2>
         <p> You will be redirected to the Home Page shortly! </p>
-        <button onclick="redirectToForm()"> Back to Feedback Form Page </button>
+        <button onclick="redirectToForm()"> Back to Home </button>
     </div>
   
     
