Added some comments and alt text
added some comments to some codes and added the alt texts

--- a/Lithila/content.html
+++ b/Lithila/content.html
@@ -49,7 +49,7 @@
     <div class="intro">
         <h2  id="content-1"> The Importance of Forests </h2>
 
-        <img class="img-1" src="./assests/bio.jpg">
+        <img class="img-1" src="./assests/bio.jpg" alt="Picture of a forest">
 
         <p> 
             Forests are vital ecosystems that provide numerous ecological, economic, and social benefits. They cover about 31% of the world's land area and 
@@ -67,7 +67,7 @@
     <div class="intro">
         <h2  id="content-2"> The Threat of Deforestation </h2>
 
-        <img class="img-2" src="./assests/bio2.jpg">
+        <img class="img-2" src="./assests/bio2.jpg" alt="picture of saving forest">
 
         <p> 
             Deforestation, the large-scale removal of forests, poses a significant threat to biodiversity, climate stability, and human well-being. It is primarily 
@@ -85,7 +85,7 @@
     <div class="intro">
         <h2  id="content-3"> Sustainable Forest Management </h2>
 
-        <img class="img-3" src="./assests/bio3.jpg">
+        <img class="img-3" src="./assests/bio3.jpg" alt="picture of forest management">
 
         <p> 
             Sustainable forest management (SFM) aims to balance the ecological, economic, and social functions of forests, ensuring their conservation and sustainable use for future generations. 
@@ -115,7 +115,7 @@
 
     <!-- /* back-to-top button */ -->
     <div class="back-to-top" id="back-to-top">
-        <img src="./assests/up-arrow-light.png">
+        <img src="./assests/up-arrow-light.png" alt="scrolling to top arrow">
     </div>
 
     <script src="script.js"></script>
