--- a/Lithila/sitemap.html
+++ b/Lithila/sitemap.html
@@ -159,7 +159,7 @@
 
     <!-- /* back-to-top button */ -->
     <div class="back-to-top" id="back-to-top">
-        <img src="./assests/up-arrow-light.png">
+        <img src="./assests/up-arrow-light.png" alt="scrolling to top arrow">
     </div>
 
     <script src="sitemap.js"></script>
