--- a/Induwara/content.html
+++ b/Induwara/content.html
@@ -49,7 +49,7 @@
     <div class="intro">
         <h2 id="content-1"> What is Biodiversity? </h2>
 
-        <img class="img-1" src="./assests/conservation.avif">
+        <img class="img-1" src="./assests/conservation.avif" alt="conservation">
 
         <p> 
             Biodiversity is the variety of life on Earth encompasses the diversity of species, genes and ecosystems. It is the foundation of ecosystem 
@@ -76,7 +76,7 @@
     <div class="intro">
         <h2  id="content-2"> Threats to Biodiversity </h2>
 
-        <img class="img-2" src="./assests/threat.jpg">
+        <img class="img-2" src="./assests/threat.jpg" alt="biodiversity threats">
 
         <p> 
             Despite its importance biodiversity is facing unprecedented threats from human activities. Habitat destruction, climate change, 
@@ -106,7 +106,7 @@
     <div class="intro">
         <h2  id="content-3"> Conservation Efforts and Their Impact </h2>
 
-        <img class="img-3" src="./assests/biodiversity.jpeg">
+        <img class="img-3" src="./assests/biodiversity.jpeg" alt="biodiversity">
 
         <p> 
             To address the threats to biodiversity conservation efforts are being implemented at local, national and global levels. Protected areas 
@@ -154,7 +154,7 @@
 
     <!-- /* back-to-top button */ -->
     <div class="back-to-top" id="back-to-top">
-        <img src="./assests/up-arrow-light.png">
+        <img src="./assests/up-arrow-light.png" alt="back to top light">
     </div>
 
     <script src="script.js"></script>
