--- a/Induwara/editor.html
+++ b/Induwara/editor.html
@@ -36,7 +36,7 @@
             </ul>
         </nav>
     <div class="main">
-        <center><img src="./assests/induwara.jpg" alt="Induwara Arachchi" width="170" class="image"></center>
+        <img src="./assests/induwara.jpg" alt="Induwara Arachchi" width="170" class="image">
 
         <h1>Page Editor</h1>
         <h2>Induwara Arachchi</h2>
