--- a/Induwara/feedback.html
+++ b/Induwara/feedback.html
@@ -156,7 +156,7 @@
 
     <!-- /* back-to-top button */ -->
     <div class="back-to-top" id="back-to-top">
-        <img src="./assests/up-arrow-light.png">
+        <img src="./assests/up-arrow-light.png" alt="up arrow light">
     </div>
 
 
