--- a/Induwara/home.html
+++ b/Induwara/home.html
@@ -98,7 +98,7 @@
 
         <div class="card-container">
             <div class="card">
-                <img src="./assests/sec3.1.png">
+                <img src="./assests/sec3.1.png" alt="tile 1">
                 <div class="card-content">
                     <p class="c-title"> The Importance of Biodiversity Conservation Efforts </p>
                     <div class="card-footer">
@@ -110,7 +110,7 @@
             </div>
 
             <div class="card">
-                <img src="./assests/sec3.2.png">
+                <img src="./assests/sec3.2.png" alt="tile 2">
                 <div class="card-content">
                     <p class="c-title"> Forests, Deforestation, and Sustainable Management </p>
                     <div class="card-footer">
@@ -122,7 +122,7 @@
             </div>
 
             <div class="card">
-                <img src="./assests/sec3.3.png">
+                <img src="./assests/sec3.3.png" alt="tile 3">
                 <div class="card-content">
                     <p class="c-title"> Wildlife and Endangered Species Conservation </p>
                     <div class="card-footer">
@@ -195,7 +195,7 @@
 
     <!-- /* back-to-top button */ -->
     <div class="back-to-top" id="back-to-top">
-        <img src="./assests/up-arrow.png">
+        <img src="./assests/up-arrow.png" alt="up arrow dark">
     </div>
 
     <script src="home.js"></script>
