--- a/Lithila/gallery.html
+++ b/Lithila/gallery.html
@@ -86,7 +86,7 @@
         </div>
     </div>
 
-    <!-- options for changing color and font style -->
+    <!-- options for changing color -->
     <div class="options-container">
         <div class="color-options">
             <label for="color-select">Choose color:</label>
@@ -101,7 +101,7 @@
                 <option value="#dc143c">Crimson</option>
             </select>
         </div>
-
+    <!-- options for changing font style -->
         <div class="font-options">
             <label for="font-select">Choose font style:</label>
             <select id="font-select">
