--- a/Lithila/sitemap.html
+++ b/Lithila/sitemap.html
@@ -43,7 +43,7 @@
             <svg id="sitemap" viewBox="0 0 800 600">
                 <title>Website Sitemap</title>
                 <!-- Define nodes -->
-                <a href="splash_screen.html" class="node-link">
+                <a href="#" class="node-link">
                     <rect id="splash-screen" x="370" y="20" width="90" height="30" rx="10" ry="10" class="node">
                         <title>Splash Screen</title>
                     </rect>
